infrastructure/cluster/kubectl/app/cdn.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cdn
  namespace: app
  labels:
    app: cdn
spec:
  selector:
    matchLabels:
      app: cdn
  template:
    metadata:
      labels:
        app: cdn
    spec:
      containers:
      - name: cdn
        image: ghcr.io/seventv/cdn-new:latest-new
        imagePullPolicy: Always
        args:
          - "--config=/app/config.toml"
        resources:
          limits:
            memory: "62Gi"
            cpu: 16000m
          requests:
            memory: "62Gi"
            cpu: 16000m
        livenessProbe:
          httpGet:
            port: metrics
            path: /health
        readinessProbe:
          httpGet:
            port: metrics
            path: /health
        ports:
        - containerPort: 80
          hostPort: 80
          name: http
        - containerPort: 443
          hostPort: 443
          name: https
        - containerPort: 9000
          name: metrics
        volumeMounts:
        - name: config
          mountPath: /app/config.toml
          subPath: config.toml
        - name: tls
          mountPath: /app/tls
      volumes:
      - name: config
        configMap:
          name: cdn
      - name: tls
        secret:
          secretName: cdn-tls
      tolerations:
        - key: "7tv.io/node-type"
          operator: "Equal"
          value: "cdn"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: "7tv.io/node-type"
                operator: "In"
                values:
                - cdn
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: "app"
                operator: "In"
                values:
                - cdn
            topologyKey: "kubernetes.io/hostname"
---
apiVersion: v1
kind: Service
metadata:
  name: cdn
  namespace: app
  labels:
    app: cdn
spec:
  selector:
    app: cdn
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  - name: metrics
    port: 9000
    targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: cdn-headless
  namespace: app
  labels:
    app: cdn
  annotations:
    external-dns.alpha.kubernetes.io/endpoints-type: NodeExternalIP
    external-dns.alpha.kubernetes.io/hostname: eu.cdn.7tv.app
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  clusterIP: None
  selector:
    app: cdn
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  - name: metrics
    port: 9000
    targetPort: 9000
