infrastructure/cluster/kubectl/app/event-api.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: event-api
  namespace: app
  labels:
    app: event-api
spec:
  selector:
    matchLabels:
      app: event-api
  template:
    metadata:
      labels:
        app: event-api
    spec:
      containers:
      - name: event-api
        image: ghcr.io/seventv/event-api-new:latest
        imagePullPolicy: Always
        args:
          - "--config=/app/config.toml"
        resources:
          limits:
            memory: "120Gi"
            cpu: 16000m
          requests:
            memory: "120Gi"
            cpu: 16000m
        livenessProbe:
          httpGet:
            port: metrics
            path: /health
        readinessProbe:
          httpGet:
            port: metrics
            path: /health
        ports:
        - containerPort: 80
          hostPort: 80
          name: http
        - containerPort: 443
          hostPort: 443
          name: https
        - containerPort: 9000
          name: metrics
        volumeMounts:
        - name: config
          mountPath: /app/config.toml
          subPath: config.toml
        - name: tls
          mountPath: /app/tls
      volumes:
      - name: config
        configMap:
          name: event-api
      - name: tls
        secret:
          secretName: event-api-tls
      tolerations:
        - key: "7tv.io/node-type"
          operator: "Equal"
          value: "event-api"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: "7tv.io/node-type"
                operator: "In"
                values:
                - event-api
---
apiVersion: v1
kind: Service
metadata:
  name: event-api
  namespace: app
  labels:
    app: event-api
spec:
  selector:
    app: event-api
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  - name: metrics
    port: 9000
    targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: event-api-headless
  namespace: app
  labels:
    app: event-api
  annotations:
    external-dns.alpha.kubernetes.io/endpoints-type: NodeExternalIP
    external-dns.alpha.kubernetes.io/hostname: events.7tv.io
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  clusterIP: None
  selector:
    app: event-api
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  - name: metrics
    port: 9000
    targetPort: 9000
